[gd_scene load_steps=9 format=3 uid="uid://ccshw553ius5b"]

[ext_resource type="Script" path="res://Scenes/gamestuff.gd" id="1_bei4d"]
[ext_resource type="Shader" path="res://Shaders/unlit_tex.gdshader" id="2_a7ucq"]
[ext_resource type="Texture2D" uid="uid://ce1hk00a71g72" path="res://Art/square.png" id="3_6qxx5"]
[ext_resource type="AudioStream" uid="uid://chkn30cgtfa0h" path="res://Sound/Final Splash.wav" id="4_aoq66"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6cf0a"]
render_priority = 0
shader = ExtResource("2_a7ucq")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/tex = ExtResource("3_6qxx5")

[sub_resource type="QuadMesh" id="QuadMesh_kit86"]
material = SubResource("ShaderMaterial_6cf0a")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xlmyd"]
render_priority = 0
shader = ExtResource("2_a7ucq")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/tex = ExtResource("3_6qxx5")

[sub_resource type="QuadMesh" id="QuadMesh_p73jy"]
material = SubResource("ShaderMaterial_xlmyd")

[node name="GameStuff" type="Node3D"]
script = ExtResource("1_bei4d")

[node name="Separator" type="MeshInstance3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 700, 0, 0, 0, 1, 0, 0, 50)
mesh = SubResource("QuadMesh_kit86")

[node name="SeparatorFill" type="MeshInstance3D" parent="Separator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
mesh = SubResource("QuadMesh_p73jy")
skeleton = NodePath("../..")

[node name="EndSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_aoq66")
attenuation_model = 3
